--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -2,10 +2,13 @@
 <html>
   <head>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-   <script type="text/javascript" src="javascripts/calculatorHandler.js"></script>
+   <script type="text/javascript" src="javascripts/feedHandler.js"></script>
     <title><%= title %></title>
   </head>
   <body>
     <h1><%= title %></h1>
+    <p>
+    <%= body %>
+    </p>
   </body>
 </html>
