Made changes to feed

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -8,7 +8,13 @@
   <body>
     <h1><%= title %></h1>
     <p>
+    <h2> Names </h2>
     <%= body %>
     </p>
+    <h2> Countries </h2>
+    <%= country %>
+    <h3> Country Codes </h3>
+    <%= cc %>
+
   </body>
 </html>
