Functionality for the hdi index is nearly complete - trying to understand how callbacks are working

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -15,6 +15,7 @@
     <%= country %>
     <h3> Country Codes </h3>
     <%= cc %>
-
+    <h3> Human Development Index </h3>
+    <%= hdi %>
   </body>
 </html>
