--- a/views/home.ejs
+++ b/views/home.ejs
@@ -285,6 +285,21 @@
 								
 							</div>
 						</li>
+						<li>
+							<a href="#image-8">
+								<img src="images/works/thumbs/8.jpg" alt="">
+								<span>+</span>
+							</a>
+							<div class="lb-overlay" id="image-9">
+								<a href="#page" class="lb-close">x Close</a>
+								<img src="images/works/8.jpg" alt="" />
+								<div>
+									<h3>Sleek <span>/Design/</h3>
+									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
+								</div>
+								
+							</div>
+						</li>
 					</ul>
 					
 					</div>
