Get HDI Index is working

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -13,9 +13,9 @@
     </p>
     <h2> Countries </h2>
     <%= country %>
-    <h3> Country Codes </h3>
-    <%= cc %>
     <h3> Human Development Index </h3>
     <%= hdi %>
+    
+    <script type="text/javascript" src="routes/feed.js"></script>
   </body>
 </html>
