Finished map clustering

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -68,7 +68,7 @@
         markers.push(marker);
       }
       var markerCluster = new MarkerClusterer(map, markers,
-            {imagePath: 'https://raw.githubusercontent.com/googlemaps/js-marker-clusterer/gh-pages/images/'});
+            {imagePath: 'https://cdn.rawgit.com/googlemaps/js-marker-clusterer/gh-pages/images/m'});
       }
     
   </script>
