--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,8 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="javascripts/modernizr.custom.js"></script>
 	<script type="text/javascript" src="javascripts/homeHandler.js"></script>
-
-      </head>
+  </head>
   <body>
 	<div class="menu-area">
 			<div id="dl-menu" class="dl-menuwrapper">
@@ -55,8 +54,8 @@
 	 </div>
 	  
 
-	  
-	  
+
+
 	  <!-- About -->
 	  <section id="about" class="home-section bg-white">
 		<div class="container">
@@ -69,23 +68,29 @@
 				  </div>
 			  </div>
 			  <div class="row">
-                <div class="col-xs-12 col-sm-3 col-md-4 col-lg-3 col-md-offset-3">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 col-sm-offset-2 col-md-offset-2">
 					<div class="box-team wow bounceInDown" data-wow-delay="0.1s">
                     <img src="images/team/1.jpg" alt="" class="img-responsive" />
-                    <h4>Hung Nguyen</h4>
+                    <h4>Tony Ly</h4>
                     <p>Software Engineer</p>
 					</div>
                 </div>
-                <div class="col-xs-12 col-sm-3 col-md-4 col-lg-3" data-wow-delay="0.3s">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
 					<div class="box-team wow bounceInDown">
                     <img src="images/team/2.jpg" alt="" class="img-responsive" />
                     <h4>Marshall Seid</h4>
-                    <p>Web Developer</p>
+                    <p>Software Engineer</p>
+					</div>
+                </div>
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
+					<div class="box-team wow bounceInDown">
+                    <img src="images/team/3.jpg" alt="" class="img-responsive" />
+                    <h4>Jason Yang</h4>
+                    <p>Software Engineer</p>
 					</div>
                 </div>
 			  </div>			  
 		  </div>	  
-	  </section>
 	  
 		<!-- spacer -->	  
 		<section id="spacer1" class="home-section spacer">	
