Finished a lot of stuff

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -22,16 +22,16 @@
     <!-- Collection of nav links and other content for toggling -->
     <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#works">Works</a></li>
-            <li><a href="/map">Map</a></li>
+            <li><a href="http://kiva.herokuapp.com/#about">About</a></li>
+            <li><a href="http://kiva.herokuapp.com/#services">Services</a></li>
+            <li><a href="http://kiva.herokuapp.com/#works">Borrowers</a></li>
+            <li><a href="#">Map</a></li>
             <li><a href="/tag">Tag Analysis</a></li>
             <li><a href="/us">US Loans Analysis</a></li>
         </ul>
     </div>
 </nav>
-<div id="map" style="height: 100%; width: 100%;"></div>
+<div id="map" style="height: 90%; width: 100%;"></div>
 <script type="text/javascript">
     var coord = [];
     function query(callback){
