--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -345,13 +345,13 @@ Works
 	opacity: 0;
 	filter: alpha(opacity=0); /* internet explorer */
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=0)"; /*IE8*/
-	background: rgb(241,210,194);
-	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(241,210,194,1) 100%);
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(241,210,194,1)));
-	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-	background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+	background: rgb(128,128,128);
+	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(128,128,128,1) 100%);
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(128,128,128,1)));
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(128,128,128,1) 100%);
+	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(128,128,128,1) 100%);
+	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(128,128,128,1) 100%);
+	background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(128,128,128,1) 100%);
 	-webkit-transition: opacity 0.3s linear;
 	-moz-transition: opacity 0.3s linear;
 	-o-transition: opacity 0.3s linear;
@@ -373,13 +373,13 @@ Works
 	padding: 0px;
 	z-index: 99;
 	text-align: center;
-	background: rgb(241,210,194);
-	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(241,210,194,1) 100%);
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(241,210,194,1)));
-	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
-	background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(241,210,194,1) 100%);
+	background: rgb(128,128,128);
+	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%, rgba(128,128,128,1) 100%);
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,0.56)), color-stop(100%,rgba(128,128,128,1)));
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(128,128,128,1) 100%);
+	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(128,128,128,1) 100%);
+	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(128,128,128,1) 100%);
+	background: radial-gradient(center, ellipse cover, rgba(255,255,255,0.56) 0%,rgba(128,128,128,1) 100%);
 }
 .lb-overlay > div{
 	position: relative;
@@ -415,7 +415,7 @@ Works
 .lb-overlay div p{
 	font-size: 16px;
 	text-shadow: none;
-	color: #fff;
+	color: purple;
 }
 .lb-overlay div h3 span{
 	display: block;
@@ -431,14 +431,11 @@ Works
 	z-index: 1001;
 	color: #fff;
 	position: absolute;
-	top: 43px;
-	left: 50%;
-	
+	top: 62px;
+	left: 92%;
 	font-size: 28px;
 	line-height: 26px;
 	text-align: center;
-	width: 50px;
-	height: 23px;
 	overflow: hidden;
 	margin-left: -25px;
 	opacity: 0;
@@ -466,11 +463,11 @@ Works
 	padding: 80px 100px 120px 100px;
 }
 .lb-overlay:target img {
-	-webkit-animation: fadeInScale 1.2s ease-in-out;
-	-moz-animation: fadeInScale 1.2s ease-in-out;
-	-o-animation: fadeInScale 1.2s ease-in-out;
-	-ms-animation: fadeInScale 1.2s ease-in-out;
-	animation: fadeInScale 1.2s ease-in-out;
+	-webkit-animation: fadeInScale 0.5s ease-in-out;
+	-moz-animation: fadeInScale 0.5s ease-in-out;
+	-o-animation: fadeInScale 0.5s ease-in-out;
+	-ms-animation: fadeInScale 0.5s ease-in-out;
+	animation: fadeInScale 0.5s ease-in-out;
 }
 .lb-overlay:target a.lb-close,
 .lb-overlay:target > div{
