--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="javascripts/homeHandler.js"></script>
   </head>
   <body>
-	<nav role="navigation" class="navbar navbar-default">
+	<nav role="navigation" class="navbar navbar-default navbar-fixed-top">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
@@ -29,7 +29,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#works">Works</a></li>
+                <li><a href="#works">Borrowers</a></li>
                 <li><a href="/map">Map</a></li>
                 <li><a href="/tag">Tag Analysis</a></li>
                 <li><a href="/us">US Loans Analysis</a></li>
@@ -159,150 +159,111 @@
 				  <div class="col-md-offset-2 col-md-8">
 					<div class="section-heading">
 					 <h2>Borrowers</h2>
-					 <p>Let us help you find the most impactful loan.</p>
+					 <p>Real people with real ambitions.</p>
 					</div>
 				  </div>
 			  </div>
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8">
-					
 					<ul class="lb-album">
 						<li>
 							<a href="#image-1">
-								<img src="images/works/thumbs/1.jpg" alt="">
+								<img src="" id="img-1">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-1">
-								<a href="#page" class="lb-close">X</a>
-								<img src="images/works/1.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-								
+								<a href="#page" class="lb-close"><button type="button" class="btn btn-primary">Close</button></a>
+								<img src="" id="desc-img-1"/>
+								<div id="desc-1"></div>
 							</div>
 						</li>
 						<li>
 							<a href="#image-2">
-								<img src="images/works/thumbs/2.jpg" alt="">
+								<img src="" id="img-2">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-2">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="images/works/2.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
+								<a href="#page" class="lb-close"><button type="button" class="btn btn-primary">Close</button></a>
+								<img src="" id="desc-img-2" />
+								<div id="desc-2"></div>
 								
 							</div>
 						</li>
 						<li>
 							<a href="#image-3">
-								<img src="images/works/thumbs/3.jpg" alt="">
+								<img src="" id="img-3">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-3">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="images/works/3.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
+								<a href="#page" class="lb-close"><button type="button" class="btn btn-primary">Close</button></a>
+								<img src="" id="desc-img-3"/>
+								<div id="desc-3"></div>
 								
 							</div>
 						</li>
 						<li>
 							<a href="#image-4">
-								<img src="images/works/thumbs/4.jpg" alt="">
+								<img src="" id="img-4">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-4">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="images/works/4.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
+								<a href="#page" class="lb-close"><button type="button" class="btn btn-primary">Close</button></a>
+								<img src="" id="desc-img-4" />
+								<div id="desc-4"></div>
 								
 							</div>
 						</li>
 						
 						<li>
 							<a href="#image-5">
-								<img src="images/works/thumbs/5.jpg" alt="">
+								<img src="" id="img-5">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-5">
-								<a href="#page" class="lb-close">X</a>
-								<img src="images/works/5.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
+								<a href="#page" class="lb-close"><button type="button" class="btn btn-primary">Close</button></a>
+								<img src="" id="desc-img-5" />
+								<div id="desc-5"></div>
 								
 							</div>
 						</li>
 						<li>
 							<a href="#image-6">
-								<img src="images/works/thumbs/6.jpg" alt="">
+								<img src="" id="img-6">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-6">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="images/works/6.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
+								<a href="#page" class="lb-close"><button type="button" class="btn btn-primary">Close</button></a>
+								<img src="" id="desc-img-6" />
+								<div id="desc-6"></div>
 								
 							</div>
 						</li>
 						<li>
 							<a href="#image-7">
-								<img src="images/works/thumbs/7.jpg" alt="">
+								<img src="" id="img-7">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-7">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="images/works/7.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
+								<a href="#page" class="lb-close"><button type="button" class="btn btn-primary">Close</button></a>
+								<img src="" id="desc-img-7"/>
+								<div id="desc-7"></div>
 								
 							</div>
 						</li>
 						<li>
 							<a href="#image-8">
-								<img src="images/works/thumbs/8.jpg" alt="">
+								<img src="" id="img-8">
 								<span>+</span>
 							</a>
 							<div class="lb-overlay" id="image-8">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="images/works/8.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
+								<a href="#page" class="lb-close"><button type="button" class="btn btn-primary">Close</button></a>
+								<img src="" id="desc-img-8"/>
+								<div id="desc-8"></div>
 								
 							</div>
 						</li>
-						<li>
-							<a href="#image-8">
-								<img src="images/works/thumbs/8.jpg" alt="">
-								<span>+</span>
-							</a>
-							<div class="lb-overlay" id="image-9">
-								<a href="#page" class="lb-close">x Close</a>
-								<img src="images/works/8.jpg" alt="" />
-								<div>
-									<h3>Sleek <span>/Design/</h3>
-									<p>Lorem ipsum dolor sit amet, ut decore iracundia urbanitas sit.</p>
-								</div>
-								
-							</div>
-						</li>
+						
+						
 					</ul>
 					
 					</div>
@@ -336,6 +297,54 @@
 	</footer>
 	 
 	 <!-- js -->
+	 <script type="text/javascript">
+    var array = [];
+    function query(callback){
+      	var increment = 0;
+        $.ajax({
+            type: "GET",
+            url: "http://api.kivaws.org/v1/loans/newest.json?per_page=8&page=1",
+
+            success: function(response, data) {
+              //run the code here that needs to access the data returned
+              console.log("Query success");
+              var i = 0;
+              for(; i < response["loans"].length; i++){
+              	//id (for picture), name, use
+              	var ret = [];
+              	ret.push(response["loans"][i]["id"]);
+              	ret.push(response["loans"][i]["name"]);
+              	ret.push(response["loans"][i]["use"]);
+              	ret.push(response["loans"][i]["image"]["id"]);
+              	array.push(ret);
+              	increment++;
+              }
+
+              if (increment == i) {
+              	callback(array);
+              }
+            },
+            error: function(response, data){
+              console.log("Query error");
+              callback(data);
+            },
+        });
+      };
+
+    var obj = query(postQuery);
+
+    function postQuery(array) {
+    	console.log(array);
+    	for(var index = 1; index <= array.length; index++){
+    	document.getElementById("img-" + index).src="https://www.kiva.org/img/s150/"+ array[index-1][3]+ ".jpg";
+    	document.getElementById("desc-img-" + index).src="https://www.kiva.org/img/fullsize/"+ array[index-1][3]+ ".jpg";
+
+    	var desc = "<p>" + array[index-1][1] + " needs a loan " + array[index-1][2] + "</p><br>"
+    	desc += "<a href='https://www.kiva.org/lend/" + array[index-1][0] + "' target='_blank'><button type='button' class='btn btn-primary'>Support Me Here</button></a>";
+    	document.getElementById("desc-" + index).innerHTML = desc;
+    }
+    }
+    </script>
     <script src="javascripts/jquery.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
 	<script src="javascripts/jquery.smooth-scroll.min.js"></script>
