--- a/views/us.ejs
+++ b/views/us.ejs
@@ -21,12 +21,12 @@
     <!-- Collection of nav links and other content for toggling -->
     <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="http://kiva.herokuapp.com/#about">About</a></li>
+            <li><a href="http://kiva.herokuapp.com/#services">Services</a></li>
+            <li><a href="http://kiva.herokuapp.com/#works">Borrowers</a></li>
             <li><a href="/map">Map</a></li>
             <li><a href="/tag">Tag Analysis</a></li>
-            <li><a href="/us">US Loans Analysis</a></li>
+            <li><a href="#">US Loans Analysis</a></li>
         </ul>
     </div>
 </nav>
