--- a/views/map.ejs
+++ b/views/map.ejs
@@ -106,6 +106,7 @@
   </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
-
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALdOh8jVm4_6wccugfrjZ4sdBYK2b-vac&callback=initMap"
+  type="text/javascript"></script>
 </body>
 </html>
