Added layout for campaign assistance

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#works">Borrowers</a></li>
                 <li><a href="/map">Map</a></li>
-                <li><a href="/tag">Tag Analysis</a></li>
+                <li><a href="/analysis">Campaign Assistance</a></li>
                 <li><a href="/us">US Loans Analysis</a></li>
             </ul>
         </div>
