--- a/views/us.ejs
+++ b/views/us.ejs
@@ -25,7 +25,7 @@
             <li><a href="http://kiva.herokuapp.com/#services">Services</a></li>
             <li><a href="http://kiva.herokuapp.com/#works">Borrowers</a></li>
             <li><a href="/map">Map</a></li>
-            <li><a href="/tag">Tag Analysis</a></li>
+            <li><a href="/analysis">Campaign Assistance</a></li>
             <li><a href="#">US Loans Analysis</a></li>
         </ul>
     </div>
