--- a/views/map.ejs
+++ b/views/map.ejs
@@ -26,7 +26,7 @@
             <li><a href="http://kiva.herokuapp.com/#services">Services</a></li>
             <li><a href="http://kiva.herokuapp.com/#works">Borrowers</a></li>
             <li><a href="#">Map</a></li>
-            <li><a href="/tag">Tag Analysis</a></li>
+            <li><a href="/analysis">Campaign Assistance</a></li>
             <li><a href="/us">US Loans Analysis</a></li>
         </ul>
     </div>
