--- a/views/analysis.ejs
+++ b/views/analysis.ejs
@@ -3,6 +3,8 @@
   <title>US Loan Analysis</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+  <script type="text/javascript" src="javascripts/analysisHandler.js"></script>
+
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
@@ -36,9 +38,10 @@
    <form>
     <div class="form-group">
       <label for="loan_amt">Loan Amount:</label>
-      <input type="number" class="form-control" id="loan_amt">
+      <input type="number" name="valueId" placeholder="Amount in USD" class="form-control" id="loan_amt">
     </div>
   </form>
+
 <div class="form-group">
       <label for="sector">Sector (select one):</label>
       <select class="form-control" id="sector">
@@ -62,8 +65,8 @@
 </div>
 
   <label>Themes (Check any):</label>
-  <form>
-  <div class="checkbox-inline"> <label><input type="checkbox" value="">Green</label>
+  <form id="theme">
+    <div class="checkbox-inline"> <label><input type="checkbox" value="">Green</label>
     </div>
     <div class="checkbox-inline"> <label><input type="checkbox" value="">Higher Education</label>
     </div>
@@ -112,16 +115,16 @@
     <div class="checkbox-inline"> <label><input type="checkbox" value=""> Refugees/Displaced</label>
     </div>
   </form>
-  <button type="button" class="btn btn-success">Submit</button>
+  <button type="button" id="submit" class="btn btn-success">Submit</button>
 </div>
 
 
 
   <script type="text/javascript">
-    var input_amt = 0
-    var num_themes
-    var theme_amt = Loop through all theme inputs, add all that are added
-    var
+    // var input_amt = 0
+    // var num_themes
+    // var theme_amt = Loop through all theme inputs, add all that are added
+
     function activites(activities) {
       
     }
@@ -131,10 +134,6 @@
     function theme(input) {
 
     }
-
-
-    var obj = query(postData);
-
   </script>
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 </body>
