--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,9 +44,9 @@
 				<div class="row">	
 				<div class="col-md-12">
 					<div class="brand">
-						<h1><a href="/">Kiva Impact</a></h1>
+						<h1><a href="/">Kiva Impact Project</a></h1>
 						<div class="line-spacer"></div>
-						<p><span>KPCB Fellows Challenge</span></p>
+						<p><span>Microfinance Loans</span></p>
 					</div>
 				</div>
 				</div>
